tests/ui/attributes/const-stability-on-macro.stderr
error: the `rustc_const_stable` attribute cannot be used on macro defs
  --> $DIR/const-stability-on-macro.rs:4:3
   |
LL | #[rustc_const_stable(feature = "foo", since = "3.3.3")]
   |   ^^^^^^^^^^^^^^^^^^
   |
   = help: the `rustc_const_stable` attribute can be applied to associated consts, constants, crates, functions, impl blocks, statics, traits, and use statements

error: the `rustc_const_unstable` attribute cannot be used on macro defs
  --> $DIR/const-stability-on-macro.rs:10:3
   |
LL | #[rustc_const_unstable(feature = "bar", issue = "none")]
   |   ^^^^^^^^^^^^^^^^^^^^
   |
   = help: the `rustc_const_unstable` attribute can be applied to associated consts, constants, crates, functions, impl blocks, statics, traits, and use statements

error: aborting due to 2 previous errors

